force-app/main/default/objects/Custom_Event_Log__c/Custom_Event_Log__c.object-meta.xml
<CustomObject>
    <description>Contains all Custom Platform Event generate by business process</description>
    <label>Custom Event Log</label>
    <nameField>
        <label>Custom Event Log</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>