force-app/main/default/objects/Custom_Event_Log__c/fields/Modality__c.field-meta.xml
<CustomField>
    <fullName>Modality__c</fullName>
    <description>Modalità Online Batch</description>
    <label>Modalità</label>
    <length>100</length>
    <type>Text</type>
</CustomField>