force-app/main/default/objects/Custom_Event_Log__c/fields/Name_pe__c.field-meta.xml
<CustomField>
    <fullName>Name_pe__c</fullName>
    <description>Name Platform Event</description>
    <label>Name Platform Event</label>
    <length>100</length>
    <type>Text</type>
</CustomField>