force-app/main/default/objects/Custom_Event_Log__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Operation</description>
    <label>Operation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>