force-app/main/default/objects/Custom_Event_Log__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Event payload</description>
    <label>Event payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>