force-app/main/default/objects/Custom_Event_Log__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <description>Process</description>
    <label>Process</label>
    <length>100</length>
    <type>Text</type>
</CustomField>