force-app/main/default/objects/Custom_Event_Log__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <description>RecordType Developer Name</description>
    <label>RecordType Developer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>