force-app/main/default/objects/Custom_Event_Log__c/fields/ReplayId__c.field-meta.xml
<CustomField>
    <fullName>ReplayId__c</fullName>
    <description>ReplayId</description>
    <label>ReplayId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>