force-app/main/default/objects/Custom_Event_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Timestamp</description>
    <label>Timestamp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>